--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,4 +1,9 @@
 
+2008-08-23  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Updated for i686: 1.2.31
+	* Thanks to Hussam Al-Tayeb
+
 2008-08-17  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Had to return to 1.2.29 because xul depends on 
