upgpkg: libpng 1.2.31-1     Updated for i686: 1.2.31
git-svn-id: file:///srv/repos/svn-packages/svn@10072 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libpng/trunk/ChangeLog
+++ b/libpng/trunk/ChangeLog
@@ -1,4 +1,9 @@
 
+2008-08-23  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Updated for i686: 1.2.31
+	* Thanks to Hussam Al-Tayeb
+
 2008-08-17  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Had to return to 1.2.29 because xul depends on 
