--- a/gimp-devel/trunk/ChangeLog
+++ b/gimp-devel/trunk/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-22  Eric Belanger  <eric@archlinux.org>
+
+	* gimp-devel 2.5.3-1
+	* Upstream update
+	* Added optdepends to clean up install script
+	* Added devel docs
+
 2008-07-18  Eric Belanger  <eric@archlinux.org>
 
 	* gimp-devel 2.5.2-1
