upgpkg: transmission-cli 1.33-1
git-svn-id: file:///srv/repos/svn-packages/svn@10282 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/transmission-cli/trunk/ChangeLog
+++ b/transmission-cli/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-23  Alexander Fehr  <pizzapunk gmail com>
+
+  * transmission-cli-1.33-1:
+  New upstream release.
+
 2008-08-09  Alexander Fehr  <pizzapunk gmail com>
 
   * transmission-cli-1.32-1:
