upgpkg: openoffice-base-devel 3.0_dev300_m30-1
git-svn-id: file:///srv/repos/svn-packages/svn@10330 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base-devel/trunk/ChangeLog
+++ b/openoffice-base-devel/trunk/ChangeLog
@@ -1,3 +1,7 @@
+openoffice-base-devel - 3.0_dev300_m30-1
+- build with system hsqldb is broken
+- move some deps to optdepends
+
 openoffice-base-devel - 3.0_dev300_m29-2
 - rebuild for icu4.0
 - remove unneeded xmlsec makedep
