--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,16 +1,29 @@
-2008-03-15 Travis Willard <travis@archlinux.org>
+2008-08-30  Alexander Fehr  <pizzapunk gmail com>
 
-	* 1.5.0-1
-	New upstream release.
-	Changed dependency on 'audacious-player' to 'audacious'
+  * audacious-plugins-1.5.1-1:
+  New upstream release.
+  New maintainer.
+  Changed license to GPL.
+  Cleaned up dependencies and made more of them optional.
+  Removed !libtool option.
+  Built MTP upload, RootVis and MMS plugins.
+  Enabled SSE2 for x86_64.
+  Added audacious-plugins-amidi.patch to fix AMIDI-Plug plugin.
+  Removed install file.
 
-2008-03-08 Travis Willard <travis@archlinux.org>
+2008-03-15  Travis Willard  <travis@archlinux.org>
 
-	* 1.4.5-2
-	Switched to optdepends usage for optional dependencies
+  * audacious-plugins-1.5.0-1:
+  New upstream release.
+  Changed dependency on 'audacious-player' to 'audacious'.
 
-2008-02-16 Travis Willard <travis@archlinux.org>
+2008-03-08  Travis Willard  <travis@archlinux.org>
 
-	* 1.4.5-1
-	Added ChangeLog
-	New upstream release.
+  * audacious-plugins-1.4.5-2:
+  Switched to optdepends usage for optional dependencies.
+
+2008-02-16  Travis Willard  <travis@archlinux.org>
+
+  * audacious-plugins-1.4.5-1:
+  New upstream release.
+  Added ChangeLog.
