upgpkg: openoffice-base-beta 3.0_ooo300_m4-1
git-svn-id: file:///srv/repos/svn-packages/svn@11752 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base-beta/trunk/ChangeLog
+++ b/openoffice-base-beta/trunk/ChangeLog
@@ -1,3 +1,7 @@
+openoffice-base-beta 3.0-ooo300_m4-1
+- use gzip compression for cvs, much faster
+- --disable-reportdesign extion build
+
 openoffice-base-beta 3.0-ooo300_m3-1
 - new snapshot
 - fixed buildfix-gcc43.diff
