--- a/monotone/trunk/ChangeLog
+++ b/monotone/trunk/ChangeLog
@@ -1,6 +1,10 @@
 
+2008-09-04  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Updated for i686: 0.41
+
 2008-07-05  Douglas Soares de Andrade  <douglas@archlinux.org>
 
-	* Updated for i686 - 0.40
+	* Updated for i686: 0.40
 	* Removed the limits patch as it is not needed anymore
 
