--- a/alpine/trunk/ChangeLog
+++ b/alpine/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-04  Eric Belanger  <eric@archlinux.org>
+
+	* alpine 2.00-1
+	* Upstream update
+	* Replaced install scriptlet with optdepends
+
 2008-03-26  Eric Belanger  <eric@archlinux.org>
 
 	* alpine 1.10-1
