upgpkg: monotone 0.41-2     Updated for i686: Removing info dir
git-svn-id: file:///srv/repos/svn-packages/svn@11886 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/monotone/trunk/ChangeLog
+++ b/monotone/trunk/ChangeLog
@@ -1,4 +1,9 @@
 
+2008-09-06  Douglas Soares de Andrade  <dsa@aur.archlinux.org>
+
+	* Updated for i686: 0.41-2
+	* Removing info dir
+
 2008-09-04  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for i686: 0.41
