--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-05  Eric Belanger  <eric@archlinux.org>
+
+	* pcre 7.8-1
+	* Upstream update
+	* Fixed license
+
 2008-07-07  Eric Belanger  <eric@archlinux.org>
 
 	* pcre 7.7-2
