--- a/xchat/trunk/ChangeLog
+++ b/xchat/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-05  Eric Belanger  <eric@archlinux.org>
+
+	* xchat 2.8.6-2
+	* Applied upstream maintenance patch
+	* Added tcl optdepends
+
 2008-06-13  Eric Belanger  <eric@archlinux.org>
 
 	* xchat 2.8.6-1
