--- a/smb4k/trunk/ChangeLog
+++ b/smb4k/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-06  Giovanni Scafora  <giovanni@archlinux.org>
+
+	* smb4k 0.10.0
+
 2008-07-26  Eric Belanger  <eric@archlinux.org>
 
 	* smb4k 0.9.6-2
