--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-06  Eric Belanger  <eric@archlinux.org>
+
+	* liferea 1.4.19-1
+	* Upstream update
+
 2008-08-03  Eric Belanger  <eric@archlinux.org>
 
 	* liferea 1.4.18-2
