--- a/eric-plugins/trunk/ChangeLog
+++ b/eric-plugins/trunk/ChangeLog
@@ -1,4 +1,8 @@
 
+2008-09-13  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Updated for i686: 4.2.1
+
 2008-08-12  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for i686: 4.2.0
