--- a/git/trunk/ChangeLog
+++ b/git/trunk/ChangeLog
@@ -1,5 +1,9 @@
 Simple version bumps are ommitted from the following ChangeLog.
 
+2008-09-14 Dan McGee <dan@archlinux.org>
+	Version 1.6.0.2-1
+	* Moved optional depends from install file to optdepends array 
+
 2008-06-15 Dan McGee <dan@archlinux.org>
 	Version 1.5.6-1
 	* Removed 'cpio' dependency, clone is now a builtin and no longer needs it
