--- a/openoffice-base-devel/trunk/ChangeLog
+++ b/openoffice-base-devel/trunk/ChangeLog
@@ -1,3 +1,9 @@
+openoffice-base-devel - 3.0_dev300_m31-2
+- use new OOo svn for checkout
+- make dict deployement invisible
+- fix build with new openjdk6 with rhino
+- disable-evolution2 build
+
 openoffice-base-devel - 3.0_dev300_m31-1
 - fix build with system hsqldb-java
 - fixes for dict deployement
