--- a/cdparanoia/trunk/ChangeLog
+++ b/cdparanoia/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-15  Alexander Fehr  <pizzapunk gmail com>
+
+  * cdparanoia-10.2-1:
+  New upstream release.
+
 2008-08-07  Alexander Fehr  <pizzapunk gmail com>
 
   * cdparanoia-10.1-1:
