upgpkg: transmission-gtk 1.34-1
git-svn-id: file:///srv/repos/svn-packages/svn@12685 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/transmission-gtk/trunk/ChangeLog
+++ b/transmission-gtk/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-17  Alexander Fehr  <pizzapunk gmail com>
+
+  * transmission-gtk-1.34-1:
+  New upstream release.
+
 2008-08-23  Alexander Fehr  <pizzapunk gmail com>
 
   * transmission-gtk-1.33-1:
