--- a/initscripts/trunk/ChangeLog
+++ b/initscripts/trunk/ChangeLog
@@ -1,3 +1,35 @@
+commit 8f1628613cc5746b7c85c6f84776b365833f1dad
+Author: Thomas Bächler <thomas@archlinux.org>
+Date:   Thu Sep 18 18:55:14 2008 +0200
+
+    Respawn udev properly when running 'init s'. Fixes #9739
+
+commit ce600eea3b9383f167cb91d784aff04821fa0528
+Author: Thomas Bächler <thomas@archlinux.org>
+Date:   Sun Sep 14 19:46:14 2008 +0200
+
+    Remove references to start_udev from rc.sysinit
+
+commit d399979d08be1ae2cc8e4ab60a68c57b120d08a0
+Author: Thomas Bächler <thomas@archlinux.org>
+Date:   Sun Sep 14 19:41:14 2008 +0200
+
+    Revert "Create udev required device nodes if missing"
+    
+    This reverts commit 119b8df1fb1258231750309f01e747e72f382493.
+    These nodes are created like 10 lines above, the [ -f ... ] check would always return false anyway (-f == regular file)
+
+commit 119b8df1fb1258231750309f01e747e72f382493
+Author: Aaron Griffin <aaronmgriffin@gmail.com>
+Date:   Sat Aug 30 21:11:39 2008 -0500
+
+    Create udev required device nodes if missing
+    
+    Udev requires /dev/console, /dev/null, and /dev/zero to exist
+    before running. Create these on init if they're missing
+    
+    Signed-off-by: Aaron Griffin <aaronmgriffin@gmail.com>
+
 commit d2ae38c8b06d057c7593b7ba836bf24a1f8f6c4f
 Author: Aaron Griffin <aaronmgriffin@gmail.com>
 Date:   Tue Aug 5 14:34:53 2008 -0400
