--- a/fluxbox/trunk/ChangeLog
+++ b/fluxbox/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-19  Eric Belanger  <eric@archlinux.org>
+
+	* fluxbox 1.1.1-1
+	* Upstream update
+
 2008-09-05  Eric Belanger  <eric@archlinux.org>
 
 	* fluxbox 1.1.0.1-1
