--- a/quodlibet/trunk/ChangeLog
+++ b/quodlibet/trunk/ChangeLog
@@ -1,3 +1,11 @@
+2008-09-20  Eric Belanger  <eric@archlinux.org>
+
+	* quodlibet 2.0-1
+	* Upstream update
+	* Updated url
+	* Fixed license
+	* Updated build process
+
 2008-08-08  Eric Belanger  <eric@archlinux.org>
 
 	* quodlibet 1.0-3
