upgpkg: quodlibet 2.0-2     Placed copy of icon in /usr/share/pixmaps to fix desktop entry
git-svn-id: file:///srv/repos/svn-packages/svn@12780 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/quodlibet/trunk/ChangeLog
+++ b/quodlibet/trunk/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-20  Eric Belanger  <eric@archlinux.org>
 
+	* quodlibet 2.0-2
+	* Placed copy of icon in /usr/share/pixmaps to fix desktop entry
+
+2008-09-20  Eric Belanger  <eric@archlinux.org>
+
 	* quodlibet 2.0-1
 	* Upstream update
 	* Updated url
