upgpkg: curl 7.19.0-1     upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@12796 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/curl/trunk/ChangeLog
+++ b/curl/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-20  Eric Belanger  <eric@archlinux.org>
+
+	* curl 7.19.0-1
+	* Upstream update
+
 2008-06-04  Eric Belanger  <eric@archlinux.org>
 
 	* curl 7.18.2-1
