--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-20  Eric Belanger  <eric@archlinux.org>
+
+	* curl 7.19.0-1
+	* Upstream update
+
 2008-06-04  Eric Belanger  <eric@archlinux.org>
 
 	* curl 7.18.2-1
