upgpkg: imagemagick 6.4.3.6-1     Upstream update, Added JPEG2000 support (close FS#10544)
git-svn-id: file:///srv/repos/svn-packages/svn@12799 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/imagemagick/trunk/ChangeLog
+++ b/imagemagick/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-06  Eric Belanger  <eric@archlinux.org>
+
+	* imagemagick 6.4.3.6-1
+	* Upstream update
+	* Added JPEG2000 support (close FS#10544)
+
 2008-08-19  Eric Belanger  <eric@archlinux.org>
 
 	* imagemagick 6.4.2.10-1
