--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-06  Eric Belanger  <eric@archlinux.org>
+
+	* imagemagick 6.4.3.6-1
+	* Upstream update
+	* Added JPEG2000 support (close FS#10544)
+
 2008-08-19  Eric Belanger  <eric@archlinux.org>
 
 	* imagemagick 6.4.2.10-1
