--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-25  Jan de Groot  <jgc@archlinux.org>
+
+	* intltool 0.40.4-1
+	* Upstream update
+
 2008-07-28  Eric Belanger  <eric@archlinux.org>
 
 	* intltool 0.40.3-1
