--- a/smplayer/trunk/ChangeLog
+++ b/smplayer/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-27  Allan McRae <allan@archlinux.org>
+	* smplayer 0.6.3-1
+	* Upstream update
+
 2008-06-21  Allan McRae <allan@archlinux.org>
 
 	* smplayer 0.6.2-1
