--- a/smplayer-themes/trunk/ChangeLog
+++ b/smplayer-themes/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-27  Allan McRae <allan@archlinux.org>
+	* smplayer-themes 0.1.17-1
+	* Upstream update
+
 2008-06-22  Allan McRae <allan@archlinux.org>
 
 	* smplayer-themes 0.1.16-1
