--- a/texinfo/trunk/ChangeLog
+++ b/texinfo/trunk/ChangeLog
@@ -1,3 +1,10 @@
+2008-09-26  Eric Belanger  <eric@archlinux.org>
+
+	* texinfo 4.13a-1
+	* Upstream update
+	* Moved to base group
+	* Added install scriptlet to handle info pages
+
 2008-04-28  Eric Belanger  <eric@archlinux.org>
 
 	* texinfo 4.12-2
