--- a/wxgtk/trunk/ChangeLog
+++ b/wxgtk/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-26  Eric Belanger  <eric@archlinux.org>
+
+	* wxgtk 2.8.9-1
+	* Upstream update
+	* Added mediactrl support (close FS#11220)
+
 2008-07-05  Eric Belanger  <eric@archlinux.org>
 
 	* wxgtk 2.8.8-1
