--- a/imagemagick/trunk/ChangeLog
+++ b/imagemagick/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-14  Eric Belanger  <eric@archlinux.org>
+
+	* imagemagick 6.5.9.5-1
+	* Upstream update
+
 2010-01-18  Eric Belanger  <eric@archlinux.org>
 
 	* imagemagick 6.5.9.0-2
