upgpkg: imagemagick-doc 6.5.9.5-1 Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@68921 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/imagemagick-doc/trunk/ChangeLog
+++ b/imagemagick-doc/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-14  Eric Belanger  <eric@archlinux.org>
+
+	* imagemagick-doc 6.5.9.5-1
+	* Upstream update
+
 2010-01-30  Eric Belanger  <eric@archlinux.org>
 
 	* imagemagick-doc 6.5.9.0-1
