upgpkg: babl 0.1.2-1 Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@69013 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/babl/trunk/ChangeLog
+++ b/babl/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-15  Eric Belanger  <eric@archlinux.org>
+
+	* babl 0.1.2-1
+	* Upstream update
+
 2009-11-29  Eric Belanger  <eric@archlinux.org>
 
 	* babl 0.1.0-1
