--- a/babl/repos/extra-i686/ChangeLog
+++ b/babl/repos/extra-i686/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-15  Eric Belanger  <eric@archlinux.org>
+
+	* babl 0.1.2-1
+	* Upstream update
+
 2009-11-29  Eric Belanger  <eric@archlinux.org>
 
 	* babl 0.1.0-1
