--- a/gegl/trunk/ChangeLog
+++ b/gegl/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-15  Eric Belanger  <eric@archlinux.org>
+
+	* gegl 0.1.2-1
+	* Upstream update
+	* Added lua support
+
 2010-01-17  Ionut Biru  <ionut@archlinux.ro>
 
 	* gegl 0.1.0-2
