upgpkg: geeqie 1.0-1 Upstream update, Removed install scriptlet
git-svn-id: file:///srv/repos/svn-packages/svn@69201 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/geeqie/trunk/ChangeLog
+++ b/geeqie/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-18  Eric Belanger  <eric@archlinux.org>
+
+	* geeqie 1.0-1
+	* Upstream update
+	* Removed install scriptlet
+
 2010-02-12  Eric Belanger  <eric@archlinux.org>
 
 	* geeqie 1.0beta2-2
