--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-18  Eric Belanger  <eric@archlinux.org>
+
+	* geeqie 1.0-1
+	* Upstream update
+	* Removed install scriptlet
+
 2010-02-12  Eric Belanger  <eric@archlinux.org>
 
 	* geeqie 1.0beta2-2
