--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-19  Eric Belanger  <eric@archlinux.org>
+
+	* gnumeric 1.10.0-1
+	* Upstream update
+	* Updated icon cache in install scriptlet
+
 2009-09-30  Eric Belanger  <eric@archlinux.org>
 
 	* gnumeric 1.8.4-4
