--- a/net-snmp/trunk/ChangeLog
+++ b/net-snmp/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-06  Eric Belanger  <eric@archlinux.org>
+
+	* net-snmp 5.5-1
+	* Upstream update
+
 2009-10-21  Eric Belanger  <eric@archlinux.org>
 
 	* net-snmp 5.4.2.1-2
