--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-22  Eric Belanger  <eric@archlinux.org>
+
+	* liferea 1.6.3-1
+	* Upstream update
+
 2010-01-23  Eric Belanger  <eric@archlinux.org>
 
 	* liferea 1.6.2-1
