--- a/imagemagick-doc/trunk/ChangeLog
+++ b/imagemagick-doc/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-26  Eric Belanger  <eric@archlinux.org>
+
+	* imagemagick-doc 6.6.0.0-1
+	* Upstream update
+
 2010-02-14  Eric Belanger  <eric@archlinux.org>
 
 	* imagemagick-doc 6.5.9.5-1
