--- a/lvm2/trunk/ChangeLog
+++ b/lvm2/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-27  Eric Belanger  <eric@archlinux.org>
+
+	* lvm2/device-mapper 2.02.61-1
+	* Upstream update
+
 2010-01-24  Thomas Bächler <thomas@archlinux.org>
        * lvm2/device-mapper 2.02.60-2
        * Rebuilt without -Wl,--as-needed, it breaks dmeventd monitoring
