--- a/fbida/trunk/ChangeLog
+++ b/fbida/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-02  Eric Belanger  <eric@archlinux.org>
+
+	* fbida 2.07-5
+	* Fixed exiftran (close FS#18302)
+	* Removed backup array
+
 2010-01-17  Eric Belanger  <eric@archlinux.org>
 
 	* fbida 2.07-4
