upgpkg: cmus 2.3.0-2 rebuilt with libmp4v2 1.9
git-svn-id: file:///srv/repos/svn-packages/svn@71470 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/cmus/trunk/ChangeLog
+++ b/cmus/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-07  Andrea Scarpino <andrea@archlinux.org>
+	* cmus 2.3.0-1
+	* rebuilt against libmp4v2 1.9.1
+
 2010-01-10  Ionut Biru <ionut@archlinux.ro>
 
 	* cmus 2.2.0-10
