upgpkg: geeqie 1.0-2 exiv2 0.19 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@71758 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/geeqie/trunk/ChangeLog
+++ b/geeqie/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-09  Andrea Scarpino <andrea@archlinux.org>
+	* geeqie 1.0-2
+	* exiv2 0.19 rebuild
+
 2010-02-18  Eric Belanger  <eric@archlinux.org>
 
 	* geeqie 1.0-1
