--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-09  Andrea Scarpino <andrea@archlinux.org>
+	* geeqie 1.0-2
+	* exiv2 0.19 rebuild
+
 2010-02-18  Eric Belanger  <eric@archlinux.org>
 
 	* geeqie 1.0-1
