--- a/laptop-mode-tools/trunk/ChangeLog
+++ b/laptop-mode-tools/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-12  Eric Belanger  <eric@archlinux.org>
+
+	* laptop-mode-tools 1.54-1
+	* Upstream update
+	* Updated backup array
+
 2010-01-03  Eric Belanger  <eric@archlinux.org>
 
 	* laptop-mode-tools 1.53-1
