--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-13  Eric Belanger  <eric@archlinux.org>
+
+	* gnumeric 1.10.1-1
+	* Upstream update
+
 2010-02-19  Eric Belanger  <eric@archlinux.org>
 
 	* gnumeric 1.10.0-1
