--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,6 @@
+2011-01-31 Dan McGee <dan@archlinux.org>
+	* Rebuild 1.4.5 with gcc 4.5.X patch accepted upstream
+
 2009-11-14 Dan McGee <dan@archlinux.org>
 	* Bump to 1.4.3
 	* Added memcached-tool to package
