--- a/gcin/trunk/install
+++ b/gcin/trunk/install
@@ -1,13 +1,14 @@
 post_install() {
-  echo -n "updating gtk.immodules... "
-  /usr/bin/gtk-query-immodules-2.0 > /etc/gtk-2.0/gtk.immodules
-  echo "done."
+	echo -n "updating gtk immodules... "
+	[ -x /usr/bin/gtk-query-immodules-2.0 ] && /usr/bin/gtk-query-immodules-2.0 > /etc/gtk-2.0/gtk.immodules
+	[ -x /usr/bin/gtk-query-immodules-3.0 ] && /usr/bin/gtk-query-immodules-3.0 > /usr/lib/gtk-3.0/3.0.0/immodules.cache
+	echo "done."
 }
 
 post_upgrade() {
-  post_install
+	post_install
 }
 
 post_remove() {
-  post_install
+	post_install
 }
