--- a/repos/extra-i686/install
+++ b/repos/extra-i686/install
@@ -1,6 +1,9 @@
 post_upgrade() {
-	/usr/lib/postfix/post-install meta_directory=/etc/postfix daemon_directory=/usr/lib/postfix command_directory=/usr/bin upgrade-package
-	chown postfix var/lib/postfix
+	if [[ $(vercmp $2 3.0.0-3) -eq -1 ]]; then
+		echo '==> The postfix daemon binaries have moved.'
+		echo '==> Please restart postfix as soon as possible.'
+	fi
+	/usr/lib/postfix/bin/post-install command_directory=/usr/bin meta_directory=/etc/postfix upgrade-configuration
 }
 
 post_install() {
